# TEP-tftp-client

./: .gitignore  README.md  pyproject.toml
src/tftp_client/: __init__.py  cli.py  client.py  errors.py  files.py  main.py  protocol.py  transport.py
tests/: test_cli.py  test_client.py  test_files.py  test_protocol.py  test_transport.py
