[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tftp-client"
version = "0.1.0"
description = "Cliente TFTP em Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tftp-client = "tftp_client.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
